# advent-of-code

./: Cargo.toml  advent-of-code.code-workspace
aoc-2021/: Cargo.toml
aoc-2021/src/: 01-sonar-sweep.rs  02-dive.rs  25-sea-cucumber.rs
aoc-2023/: Cargo.toml
aoc-2023/src/: 01-trebuchet.rs  02-cubes.rs
rust/: Cargo.toml
rust/aoc-2016/: Cargo.toml
rust/aoc-2016/src/: day_5.rs  main.rs
rust/aoc-2017/: Cargo.toml
rust/aoc-2021/: Cargo.toml
rust/aoc-2021/src/: 02-dive.rs
rust/aoc-2023/: Cargo.toml
rust/aoc-2023/src/: 04-scratchcards.rs
rust/aoc-2024/: Cargo.toml
rust/aoc-2024/src/: 01-hysteria.rs  02-reports.rs  03-mull.rs  04-ceres.rs  05-queue.rs  input_loader.rs
