[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01-hysteria"
path = "src/01-hysteria.rs"

[[bin]]
name = "02-reports"
path = "src/02-reports.rs"

[[bin]]
name = "03-mull"
path = "src/03-mull.rs"

[[bin]]
name = "04-ceres"
path = "src/04-ceres.rs"

[[bin]]
name = "05-queue"
path = "src/05-queue.rs"

[dependencies]
itertools = "0.13.0"
regex = "1.11.1"

